--- a/sportbot-web/src/app/componentes/chatbot/chatbot.component.html
+++ b/sportbot-web/src/app/componentes/chatbot/chatbot.component.html
@@ -1,20 +1,26 @@
-<nb-chat  [title]="title" [status]="status"  >
-  
-  <nb-chat-message *ngFor="let msg of messages"
-                   [type]="msg.type"
-                   [message]="msg.text"
-                   [reply]="msg.reply"
-                   [date]="msg.date"
-                   [avatar]="msg.avatar"
-                  
-                   >
+<nb-chat [title]="title" [status]="status">
+
+  <nb-chat-message  *ngFor="let msg of messages" 
+      [type]="msg.type" 
+      [message]="msg.text" 
+      [reply]="msg.reply"
+      [date]="msg.date" [avatar]="msg.avatar">
   </nb-chat-message>
 
-  <nb-chat-message *ngIf="loading" [nbSpinner]="true" nbSpinnerStatus="info"
-                   [type]="text"
-                   [message]="spinnerText"
-                   [avatar]="avatar">
+  <nb-chat-message *ngIf="loading" [nbSpinner]="true" nbSpinnerStatus="info" [type]="text" [message]="spinnerText"
+    [avatar]="avatar">
   </nb-chat-message>
+
+   <nb-chat-message *ngIf="buscaLocalizacao"
+       [message]="ultimoTexto"
+        type="file"
+        sender="John Doe"
+        [reply]="true"
+        [date]="date"
+        [files]="fileLugares"
+   >
+      </nb-chat-message>
+
 
   <nb-chat-form #form (send)="sendMessage($event)" placeholder="digite alguma coisa"></nb-chat-form>
 
